--- a/hiredis_ssl.pc.in
+++ b/hiredis_ssl.pc.in
@@ -2,11 +2,11 @@ prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 includedir=${prefix}/include
-pkgincludedir=${includedir}/hiredis
+pkgincludedir=${includedir}/hiredis-vip
 
 Name: hiredis_ssl
-Description: SSL Support for hiredis.
+Description: SSL Support for hiredis-vip.
 Version: @PROJECT_VERSION@
-Requires: hiredis
+Requires: hiredis-vip
 Libs: -L${libdir} -lhiredis_ssl
 Libs.private: -lssl -lcrypto
