--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.4.0)
 INCLUDE(GNUInstallDirs)
 PROJECT(hiredis_vip)
 
-OPTION(ENABLE_SSL "Build hiredis_ssl for SSL support" OFF)
-OPTION(DISABLE_TESTS "If tests should be compiled or not" OFF)
-
 IF (WIN32 OR MINGW)
-    SET(BUILD_SHARED_LIBS OFF)
     ADD_COMPILE_DEFINITIONS(_CRT_SECURE_NO_WARNINGS WIN32_LEAN_AND_MEAN)
 ENDIF()
 
@@ -30,16 +26,7 @@ MESSAGE("Detected version: ${VERSION}")
 
 PROJECT(hiredis_vip VERSION "${VERSION}")
 
-SET(ENABLE_EXAMPLES OFF CACHE BOOL "Enable building hiredis examples")
-
-ADD_LIBRARY(hiredis_vip
-    async.c
-    dict.c
-    hiredis.c
-    net.c
-    read.c
-    sds.c
-    sockcompat.c
+ADD_LIBRARY(hiredis_vip SHARED
     adlist.c
     command.c
     crc16.c
@@ -50,17 +37,21 @@ ADD_LIBRARY(hiredis_vip
 SET_TARGET_PROPERTIES(hiredis_vip
     PROPERTIES
     VERSION "${HIREDIS_VIP_SONAME}")
+
+FIND_PACKAGE(hiredis REQUIRED)
+
+TARGET_INCLUDE_DIRECTORIES(hiredis_vip PUBLIC ${hiredis_INCLUDE_DIRS})
+
 IF(WIN32 OR MINGW)
-    TARGET_LINK_LIBRARIES(hiredis_vip PRIVATE ws2_32)
+    TARGET_LINK_LIBRARIES(hiredis_vip PRIVATE ws2_32 hiredis::hiredis)
 ENDIF()
-TARGET_INCLUDE_DIRECTORIES(hiredis_vip PUBLIC .)
 
 CONFIGURE_FILE(hiredis_vip.pc.in hiredis_vip.pc @ONLY)
 
 INSTALL(TARGETS hiredis_vip
-    DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+        EXPORT hiredis_vip-targets)
 
-INSTALL(FILES hiredis.h read.h sds.h async.h hircluster.h dict.h adlist.h hiarray.h
+INSTALL(FILES hircluster.h adlist.h hiarray.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/hiredis_vip)
     
 INSTALL(DIRECTORY adapters
@@ -69,38 +60,23 @@ INSTALL(DIRECTORY adapters
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/hiredis_vip.pc
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
 
-IF(ENABLE_SSL)
-    IF (NOT OPENSSL_ROOT_DIR)
-        IF (APPLE)
-            SET(OPENSSL_ROOT_DIR "/usr/local/opt/openssl")
-        ENDIF()
-    ENDIF()
-    FIND_PACKAGE(OpenSSL REQUIRED)
-    ADD_LIBRARY(hiredis_ssl
-        ssl.c)
-    TARGET_INCLUDE_DIRECTORIES(hiredis_ssl PRIVATE "${OPENSSL_INCLUDE_DIR}")
-    TARGET_LINK_LIBRARIES(hiredis_ssl PRIVATE ${OPENSSL_LIBRARIES})
-    CONFIGURE_FILE(hiredis_ssl.pc.in hiredis_ssl.pc @ONLY)
+export(EXPORT hiredis_vip-targets
+       FILE ${CMAKE_CURRENT_BINARY_DIR}/hiredis_vip-targets.cmake
+       NAMESPACE hiredis_vip::)
 
-    INSTALL(TARGETS hiredis_ssl
-        DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+SET(CMAKE_CONF_INSTALL_DIR share/hiredis_vip)
+SET(INCLUDE_INSTALL_DIR include)
+include(CMakePackageConfigHelpers)
+configure_package_config_file(hiredis_vip-config.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/hiredis_vip-config.cmake
+                              INSTALL_DESTINATION ${CMAKE_CONF_INSTALL_DIR}
+                              PATH_VARS INCLUDE_INSTALL_DIR)
 
-    INSTALL(FILES hiredis_ssl.h
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/hiredis_vip)
-    
-    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/hiredis_ssl.pc
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
-ENDIF()
+INSTALL(EXPORT hiredis_vip-targets
+        FILE hiredis_vip-targets.cmake
+        NAMESPACE hiredis_vip::
+        DESTINATION ${CMAKE_CONF_INSTALL_DIR})
 
-IF(NOT (DISABLE_TESTS OR (WIN32 OR MINGW)))
-    ENABLE_TESTING()
-    ADD_EXECUTABLE(hiredis-test test.c)
-    TARGET_LINK_LIBRARIES(hiredis-test hiredis_vip)
-    ADD_TEST(NAME hiredis-test
-        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
-ENDIF()
+INSTALL(FILES hiredis_vip-config.cmake
+        DESTINATION ${CMAKE_CONF_INSTALL_DIR})
 
-# Add examples
-IF(ENABLE_EXAMPLES)
-  ADD_SUBDIRECTORY(examples)
-ENDIF(ENABLE_EXAMPLES)
+
