--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
-
-project(hiredis_vip_externalproject C)
-
+project(hiredis_cluster_externalproject)
 include(ExternalProject)
 
 ExternalProject_Add(hiredis
@@ -9,17 +7,19 @@ ExternalProject_Add(hiredis
   GIT_REPOSITORY  https://github.com/redis/hiredis
   GIT_TAG         v1.0.0
   CMAKE_CACHE_ARGS
-    "-DENABLE_SSL:BOOL=ON"
+    "-DENABLE_SSL:BOOL=OFF"
     "-DCMAKE_BUILD_TYPE:STRING=Debug"
     "-DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_CURRENT_BINARY_DIR}/hiredis"
 )
 
-ExternalProject_Add(hiredis_vip
-  PREFIX hiredis_vip
+ExternalProject_Add(hiredis_cluster
+  PREFIX hiredis_cluster
   SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/.."
   CMAKE_CACHE_ARGS
+    "-DENABLE_SSL:BOOL=OFF"
+    "-DDISABLE_TESTS:BOOL=ON"
     "-DCMAKE_BUILD_TYPE:STRING=Debug"
-    "-DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_CURRENT_BINARY_DIR}/hiredis_vip"
+    "-DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_CURRENT_BINARY_DIR}/hiredis_cluster"
     "-Dhiredis_DIR:PATH=${CMAKE_CURRENT_BINARY_DIR}/hiredis/share/hiredis"
   DEPENDS hiredis
 )
@@ -32,6 +32,6 @@ ExternalProject_Add(examples
     "-DCMAKE_BUILD_TYPE:STRING=Debug"
     "-DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_CURRENT_BINARY_DIR}/examples"
     "-Dhiredis_DIR:PATH=${CMAKE_CURRENT_BINARY_DIR}/hiredis/share/hiredis"
-    "-Dhiredis_vip_DIR:PATH=${CMAKE_CURRENT_BINARY_DIR}/hiredis_vip/share/hiredis_vip"
-  DEPENDS hiredis_vip
+    "-Dhiredis_cluster_DIR:PATH=${CMAKE_CURRENT_BINARY_DIR}/hiredis_cluster/share/hiredis_cluster"
+  DEPENDS hiredis_cluster
 )
