--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,19 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  build:
-    # The CMake configure and build commands are platform agnostic and should work equally
-    # well on Windows or Mac.  You can convert this to a matrix build if you need
-    # cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+  checkers:
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run clang-format style check (.c and .h)
+      uses: jidicula/clang-format-action@master
+
+  build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        compiler: [gcc, clang]
 
     steps:
     - name: Prepare
@@ -20,25 +27,25 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - name: Run clang-format style check (.c and .h)
-      uses: jidicula/clang-format-action@master
-
-    - name: Create out-of-source build folder
-      run: cmake -E make_directory ${{runner.workspace}}/build
+    - name: Create build folder
+      run: cmake -E make_directory build
 
     - name: Generate makefiles
+      env:
+        CC: ${{ matrix.compiler }}
+        CXX: ${{ matrix.compiler }}
       # Use a bash shell so we can use the same syntax for environment variable
       # access regardless of the host operating system
       shell: bash
-      working-directory: ${{runner.workspace}}/build
+      working-directory: build
       run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
     - name: Build
-      working-directory: ${{runner.workspace}}/build
       shell: bash
+      working-directory: build
       run: cmake --build . --config $BUILD_TYPE
 
     # - name: Test
-    #   working-directory: ${{runner.workspace}}/build
+    #   working-directory: build
     #   shell: bash
     #   run: ctest -C $BUILD_TYPE
